text in bio with scroll inside element

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       </div>
       <div class="section two">
         <div class="tabTitle">Talks, Shows & Awards</div>
-        <div class="tabSection"></div>
+        <div class="tabSection">
+        </div>
       </div>
       <div class="section three">
         <div class="tabTitle">Research & Publications</div>
@@ -47,7 +48,11 @@
       </div>
       <div class="section five">
         <div class="tabTitle">Info</div>
-        <div class="tabSection"></div>
+        <div class="tabSection">
+          <div class="infoElement" id="bio">
+            <script type="text/javascript">$("#bio").load("texts/bio.txt")</script>
+          </div>
+        </div>
       </div>
     </div>
 
