links file and hover

--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
       <div class="section five">
         <div class="tabTitle">Info</div>
         <div class="tabSection">
-          <div class="infoElement" id="bio">
+          <div id="bio">
             <script type="text/javascript">$("#bio").load("texts/bio.txt")</script>
+          </div>
+          <div id="bio_links">
+            <script type="text/javascript">$("#bio_links").load("texts/bio_links.txt")</script>
           </div>
         </div>
       </div>
