colophon init & cleanup

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
       <!-- from left to right -->
       <div class="section one">
         <div class="tabTitle">Resume</div>
-        <div class="tabSection"></div>
+        <div class="tabSection">
+          <!-- <a href="https://ronyginosar.github.io/portfolio/documents/rony_ginosar_cv_2022_creative.pdf" target="_blank">PDF.</a> -->
+
+        </div>
       </div>
       <div class="section two">
         <div class="tabTitle">Talks, Shows & Awards</div>
@@ -39,7 +42,7 @@
         </div>
       </div>
       <div class="section three">
-        <div class="tabTitle">Research & Publications</div>
+        <div class="tabTitle">ResearCh & PubliCations</div>
         <div class="tabSection"></div>
       </div>
       <div class="section four active">
@@ -49,11 +52,16 @@
       <div class="section five">
         <div class="tabTitle">Info</div>
         <div class="tabSection">
-          <div id="bio">
+          <div class="bioclass" id="bio">
             <script type="text/javascript">$("#bio").load("texts/bio.txt")</script>
           </div>
-          <div id="bio_links">
+          <div class="bioclass" id="bio_links">
             <script type="text/javascript">$("#bio_links").load("texts/bio_links.txt")</script>
+          </div>
+          <h3>colophon</h3>
+          <div class="bioclass" id="bio_colophon">
+            <h3>colophon</h3>
+            <script type="text/javascript">$("#bio_colophon").load("texts/bio_colophon.txt")</script>
           </div>
         </div>
       </div>
